src.1/objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>AccountSoftware__c</fullName>
        <formula>Account.Practice_Management_Software__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountSoftware</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Created_Date__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(Account.SR_Date_Created__c)))+&quot;/&quot; +TEXT(DAY(DATEVALUE(Account.SR_Date_Created__c)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Account.SR_Date_Created__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Current_Partner__c</fullName>
        <formula>Account.Current_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Current Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Lookup__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>Set via Parent/Child Mapping in Apex</description>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_PM_Sync_Availability__c</fullName>
        <formula>text(Account.Practice_Management_Software__r.SYNC_Availability__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account PM Sync Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RecordTypeId__c</fullName>
        <description>Set via Parent/Child Mapping in Apex</description>
        <label>Account RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Status__c</fullName>
        <description>Apex mapping via Parent/Child Mappings</description>
        <label>Account Sales Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Bogus</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_TSR_Territory__c</fullName>
        <formula>Account.Unique_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls from &#39;Unique Identifier&#39; field on the Account.</inlineHelpText>
        <label>Account TSR Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdvocateHub__Date_Added_To_AdvocateHub__c</fullName>
        <description>The date the contact was added to the AdvocateHub</description>
        <label>Date Added To AdvocateHub</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AdvocateHub__Date_Joined_AdvocateHub__c</fullName>
        <description>The date the contact joined the AdvocateHub (logged into it for the first time)</description>
        <label>Date Joined AdvocateHub</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AdvocateHub__Referral_ID__c</fullName>
        <label>Referral ID (appexchange)</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_ID__c</fullName>
        <description>Unique ID of the Referral Partner who referred the Contact. This is auto-populated from Pardot and subsequently mapped to the Account.</description>
        <inlineHelpText>Unique ID of the Referral Partner who referred the Contact. This is auto-populated from Pardot and subsequently mapped to the Account.</inlineHelpText>
        <label>Affiliate ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Custom_Label_1__c</fullName>
        <label>Ambassador Custom Label #1</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Custom_Label_2__c</fullName>
        <label>Ambassador Custom Label #2</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Custom_Label_3__c</fullName>
        <label>Ambassador Custom Label #3</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_ID__c</fullName>
        <externalId>true</externalId>
        <label>Ambassador ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Referral_Memorable_URL__c</fullName>
        <label>Ambassador Referral Memorable URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Create_Ambassador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enroll As Ambassador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambassador__Referred_By_Ambassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Ambassador</label>
        <referenceTo>Ambassador__Ambassador__c</referenceTo>
        <relationshipLabel>Referred Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Remote_Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Remote Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambassador__Short_Code__c</fullName>
        <label>Referring Short Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApptegicEngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApptegicEngagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApptegicFilters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApptegicLastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApptegicLink__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Assign_to_Distribution_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to Distribution Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Opp</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts (Associated Opp)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autocreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to notify if a contact was created through an email to case</description>
        <label>Autocreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Day_to_Contact__c</fullName>
        <label>Best Day to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Time_to_Contact__c</fullName>
        <label>Best Time to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <description>Populated by HubSpot to create a CampaignMember for the Id specified.</description>
        <label>CampaignId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Flow_Lookup__c</fullName>
        <description>Used in flow to select contacts when creating cases</description>
        <formula>FirstName&amp;&quot; &quot;&amp;LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flow Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__CES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contact Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAR__c</fullName>
        <label>Mailing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mailing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAV__c</fullName>
        <label>Mailing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MRDI__c</fullName>
        <label>Mailing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MTZ__c</fullName>
        <label>Mailing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAR__c</fullName>
        <label>Other Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAV__c</fullName>
        <label>Other Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ORDI__c</fullName>
        <label>Other Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OTZ__c</fullName>
        <label>Other Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Critical Hubspot sync field</description>
        <label>Company</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Multi__c</fullName>
        <description>Used for when a contract is signed to assign roles from the contract</description>
        <label>Contact Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Doctor/Owner</fullName>
                </value>
                <value>
                    <fullName>Business Contact</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Contract Signer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Staff Member</fullName>
                    <default>true</default>
                    <label>Staff Member</label>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>Technical Contact</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                    <isActive>false</isActive>
                    <label>Consultant</label>
                </value>
                <value>
                    <fullName>DecisionMaker</fullName>
                    <isActive>false</isActive>
                    <label>DecisionMaker</label>
                </value>
                <value>
                    <fullName>General Dentistry</fullName>
                    <isActive>false</isActive>
                    <label>General Dentistry</label>
                </value>
                <value>
                    <fullName>OfficeContact</fullName>
                    <isActive>false</isActive>
                    <label>OfficeContact</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Bogus</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_OppID__c</fullName>
        <label>Converted OppID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>ContactsFromConvertion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_From_Lead_Convertion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tells if the contact is created from Lead Convertion</description>
        <label>Created From Lead Convertion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Contact_Owner__c</fullName>
        <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
        <label>Current Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Partner__c</fullName>
        <description>Apex Mapping via parent/child mapping</description>
        <label>Current Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistGroup__c</fullName>
        <description>Set by HubSpot and used in Apex to set the matching Distribution Group.</description>
        <label>DistGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Group</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Distribution Group does not currently available to be used.</errorMessage>
            <filterItems>
                <field>Distribution_Group__c.HasNextUser__c</field>
                <operation>equals</operation>
                <value>1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Distribution_Group__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Don_t_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&#39;t Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Apex mappings via Parent/Child Mappings</description>
        <inlineHelpText>This is the Account DNC field</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_for_a_Survey__c</fullName>
        <description>Checks to see if the contact is eligible to receive a Post-Case Survey</description>
        <formula>Or(  ISBLANK(Last_Survey_Sent_Date__c), Last_Survey_Sent_Date__c &lt; Today()-15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible for a Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Campaign__c</fullName>
        <label>Email Campaign</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conversations</fullName>
                </value>
                <value>
                    <fullName>Smart Reviews</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EvergageEngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageEngagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageFilters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EvergageLastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageLink__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Healthgrades_Activated__c</fullName>
        <formula>Healthgrades_Premium__c = true &amp;&amp; 
Number_of_Activated_Healthgrades__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Healthgrades Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Healthgrades_Premium__c</fullName>
        <formula>Number_of_Healthgrades_Premium_Profiles__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Healthgrades Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_Lifecycle_Stage__c</fullName>
        <description>Hub Spot lifecycle field that is passed over from HS.</description>
        <label>HS Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Evangelist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Number_of_Bounces__c</fullName>
        <description>Hub Spot number of emails bounced.</description>
        <inlineHelpText>Hub Spot number of emails bounced.</inlineHelpText>
        <label>HS Number of Bounces</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Lead_Score__c</fullName>
        <label>HubSpot Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_HG_Scorecard_link__c</fullName>
        <label>Last HG Scorecard link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_HG_Scorecard_Update_Date__c</fullName>
        <label>Last HG Scorecard Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_ROE_Date__c</fullName>
        <description>Apex mapping via Parent/Child Mappings</description>
        <label>Last ROE Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Survey_Sent_Date__c</fullName>
        <description>Records the last time this Contact was sent a Survey</description>
        <label>Last Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Activated_Healthgrades__c</fullName>
        <label>Number of Activated Healthgrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Healthgrades_Premium_Profiles__c</fullName>
        <label>Number of Healthgrades Premium Profiles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-24</fullName>
                </value>
                <value>
                    <fullName>25-100</fullName>
                </value>
                <value>
                    <fullName>100+</fullName>
                </value>
                <value>
                    <fullName>1-4</fullName>
                </value>
                <value>
                    <fullName>5-24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Providers__c</fullName>
        <label>Number of Providers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-300</fullName>
                </value>
                <value>
                    <fullName>300+</fullName>
                </value>
                <value>
                    <fullName>1-20</fullName>
                </value>
                <value>
                    <fullName>21-124</fullName>
                </value>
                <value>
                    <fullName>125+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Business_Relationship__c</fullName>
        <formula>TEXT( Practice_Management_Software__r.Business_Relationship__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Business Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Sync_Availability__c</fullName>
        <formula>text(Practice_Management_Software__r.SYNC_Availability__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Sync Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Powerstone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the Contact has been sent to Powerstone for a call campaign. The Contact will be removed from Powerstone&#39;s list and this field will be updated if ROE is established on the Account.</description>
        <label>Powerstone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Management_Software__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set via Parent/Child Mapping in Apex</description>
        <label>Practice Management Software</label>
        <referenceTo>Management_System__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice_Software_Name__c</fullName>
        <description>Reference field to pull PM name into Five9 dialer</description>
        <formula>Account.Practice_Management_Software__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Software Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Involvement__c</fullName>
        <label>Purchase Involvement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Uninvolved</fullName>
                </value>
                <value>
                    <fullName>Involved</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__MailingAddressStatus__c</fullName>
        <label>Mailing Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__MailingCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__MailingStateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__OtherAddressStatus__c</fullName>
        <label>Other Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
</CustomObject>